--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.17.2",
     "npm-run-all": "^4.1.5",
     "superagent": "7.1.1"
@@ -42,6 +43,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.17.12",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -61,8 +63,7 @@
     "react-dom": "^17.0.2",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "@babel/preset-typescript": "^7.17.12"
+    "webpack-dev-server": "^4.8.1"
   },
   "prettier": {
     "semi": false,
